# geant4-goupil-validation

./: .gitignore  CMakeLists.txt  README.md  runG4goupil.cpp
include/: DetectorConstruction.hh  EventAction.hh  PrimaryGenerator.hh  StackingAction.hh  SteppingAction.hh
scripts/: compare.py  plot-cross-section.py  plot-spectrum.py  plot.py  stats-cpu.py
src/: DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGenerator.cpp  SteppingAction.cpp  runG4goupil.cpp
src/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGenerator.hh  StackingAction.hh
src/src/: DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGenerator.cpp  StackingAction.cpp  SteppingAction.cpp
